Improvements to pipeline - backups, UI enhanced, internet search

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Data directories (exclude from repository)
 hupd_extracted/
 hupd_processed/
-#lightrag_upload/
-#lightrag_storage/
+lightrag_upload/
+lightrag_storage/
+rag_storage/
 
 # Virtual environments
 lightrag_env/
