--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,13 @@ Desktop.ini
 .directory
 .Trash-*
 .nfs* 
+
+#session files
+sessions/
+
+#ingestion queue
+ingestion_queue/
+
+#backup chatbot
+chatbot/patent_chatbot_backup.py
+chatbot/__pycache__/
